@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3117 2003/08/27 10:58:44 wiz Exp $
+$NetBSD: CHANGES,v 1.3118 2003/08/27 15:34:22 abs Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -3356,3 +3356,5 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated cvsync to 0.24.4 [gehenna 2003-08-27]
 	Updated hermes to 1.3.3 [recht 2003-08-27]
 	Updated gtk2 to 2.2.3 [wiz 2003-08-27]
+	Updated librsync to 0.9.6nb1 [abs 2003-08-27]
+
